# instashare_api

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  AUTORS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django-test.yml
apps/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_create_superuser.py  0003_auto_20221128_2003.py  0004_user_picture.py
apps/accounts/tests/: test_models.py  test_views.py  tests_views.py
apps/core/: apps.py  models.py  views.py
apps/core/templates/core/: docs.html
apps/files/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
apps/files/migrations/: 0001_initial.py  0002_auto_20221125_1858.py  0003_change_files_path.py  0004_compressedfile.py
apps/files/tests/: test_views.py
config/: asgi.py  celery.py  nginx.conf  urls.py  wsgi.py
config/settings/: __init__.py  base.py  develop.py  production.py
docs/: accounts.http
instashare_api/templates/: base.html
scripts/: dev.py
